--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
 <body class="antialiased">
     <!-- React 挂载点 -->
     <div id="root"></div>
+    <br/>   <script type="module" src="/index.tsx"></script><br/>  
 </body>
 </html>
